[package]
name = "Homework_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rust_homework1"
path = "src/rust_homework1/rust_homework1.rs"

[[bin]]
name = "bootcamp_homework2"
path = "src/bootcamp_homework2/bootcamp_homework2.rs"

[[bin]]
name = "rust_homework2"
path = "src/rust_homework2/rust_homework2.rs"
